koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
/* ... */
#circ_request {
    fieldset:has(fieldset.disabled) {
        cursor: pointer;
    }
    fieldset {
        position: relative;

        &.disabled {
            pointer-events: none;
        }

        &.rows:has(fieldset.enabled) {
            border: 1px solid #408540;

            &::before {
                font-family: 'Font Awesome 6 Free';
                content: "\f058";
                color: #408540;
                position: absolute;
                top: -14px;
                left: -18px;
                font-size: 22px;
            }
        }
    }
}

.dropdown-menu {
    box-shadow: 0 2px 6px rgba(0,0,0,0.175);
}

.navbar.fixed-bottom {
    background: #FFF none;
    border-radius: 0;
    border-top: 1px solid #ADADAD;
    box-shadow: none;

    fieldset {
        margin: 0;
        text-align: right;
    }

    .navbar-inner {
        min-height: 0;
        padding: .4em 0;
    }

    .nav > li {
        border-right: 1px solid #CCC;

        > a {
            font-weight: normal;
        }

        &:last-child {
            border-right: 0;
        }

        &.navbar-text {
            line-height: normal;
            padding: .4em .7em;
        }
    }
}

.badge {
    a {
        font-weight: bold;
    }
}

@import "header";
@import "toolbar";
@import "forms";

@media only screen and ( min-width: 608px ) {
    .consentButtons {
        text-align: right;
        white-space: nowrap;
    }
}

@media only screen and ( min-width: 576px ) {
    body {
        padding-bottom: 4em;
    }

    #changelanguage {
        bottom: 0;
        display: block;
        left: 0;
        position: fixed;
        right: 0;
        z-index: 1030;
    }

    .buttons-list {
        max-width: 260px;
    }
}

@media ( min-width: 768px ) {
    .nav-tabs {
        .nav-link {
            border-radius: 0;
            margin: 0 .4em calc( -1 * var( --bs-nav-tabs-border-width ) ) 0;
        }
    }
}

@media ( max-width: 767px ) {
    #marcPreview {
        margin: 0;
        width: auto;
    }
}

@media only screen and ( min-width: 1000px ) {
    .patronimage {
        h5 {
            text-align: center;
        }
    }

    .patroninfo-container {
        flex-direction: column;
    }

    aside {
        fieldset {
            &.brief {
                & + .action {
                    display: flex;
                    gap: .5rem;

                    input,
                    button,
                    a {
                        display: block;
                        flex-grow: 1;

                        &.clear_search {
                            flex-grow: 0;
                            flex-shrink: 1;
                        }
                    }
                }
            }
        }
    }
}

@media only screen and ( max-width: 1000px ) {
    .browse-button {
        display: inline-block;
        width: 50%;
    }

    #browse-previous {
        border-bottom-left-radius: 5px;
        border-bottom-width: 1px;
        border-right-width: 0;
    }

    #browse-next {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 5px;
    }
}

@media ( min-width: 1050px ) {
    #helper {
        i {
            display: none;
        }

        span {
            display: inline;
        }
    }
}

@media only screen and ( min-width: 1200px ) {
    .browse-button {
        display: inline-block;
        width: 50%;
    }

    #browse-previous {
        border-bottom-left-radius: 5px;
        border-bottom-width: 1px;
        border-right-width: 0;
    }

    #browse-next {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 5px;
    }

    #logged-in-info-full {
        display: inline;
    }

    #logged-in-info-brief {
        display: none;
    }

    .loggedin-menu-label {
        display: none;
    }
}

#backtotop {
    font-size: 140%;
    position: fixed;
    bottom: 40px;
    right: 40px;
    z-index: $zindex-tooltip;
}

@media only screen and ( max-width: 1200px ) {
    .patron_search_modal {
        .modal-body {
            display: block;
        }
    }
}

[class*="filters-"] {
    [data-filtered] span:nth-child(2) {
        display: none;
    }

    a:not([data-filtered]) span:nth-child(1) {
        display: none;
    }

    a {
        cursor: pointer;
    }
}

/*rtl:raw:
.dropdown-menu-end[data-bs-popper] {
  left: auto;
  right: 0;
}
*/

/*rtl:raw:
.CodeMirror{
    text-align: left;
}
*/
// Repeatable fields display (Bug 30148)
.resource_list {
    display: inline-block;
    margin: 0;
    padding-left: 0;

    li {
        display: inline-block;
        white-space: nowrap;

        &::after {
            content: " | ";
        }

        &:last-child {
            &::after {
                content: "";
            }
        }
    }
}

